--- a/therewhere/therewhere/InviteFriendsViewController.xib
+++ b/therewhere/therewhere/InviteFriendsViewController.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14D127a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="InviteFriendsViewController" customModule="therewhere" customModuleProvider="target">
             <connections>
+                <outlet property="activityIndicator" destination="8q8-Vk-c4c" id="OFu-t0-OQW"/>
                 <outlet property="tableView" destination="rwZ-cE-0SZ" id="Gzq-w9-dLI"/>
                 <outlet property="view" destination="iN0-l3-epB" id="CeR-6f-L2n"/>
             </connections>
@@ -25,6 +26,9 @@
                         <outlet property="delegate" destination="-1" id="q8j-RS-3mL"/>
                     </connections>
                 </tableView>
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="8q8-Vk-c4c">
+                    <rect key="frame" x="150" y="117" width="20" height="20"/>
+                </activityIndicatorView>
             </subviews>
             <color key="backgroundColor" red="0.23137254901960785" green="0.47843137254901963" blue="0.85882352941176465" alpha="1" colorSpace="calibratedRGB"/>
             <gestureRecognizers/>
